# turboflow

./: .buildinfo  .bumpversion.cfg  .gitignore  .gitlab-ci.yml  Benner.py  CHANGELOG.md  Cascade_series.py  KO.py  LICENSE.md  Lossmodel.py  Property_functions.py  README.md  _.gitlab-ci.yml  df_keys.py  environment.yaml  environment.yml  examples.py  genindex.html  index.html  install_local.py  load_validation_data.py  main_cascade_series.py  objects.inv  paper.bib  paper.md  performance_maps.py  print_convergence_history.py  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  sh.exe.stackdump  validation_cases.py  validation_data.txt
.doctrees/: index.doctree
_modules/: index.html  turboflow.html
_sources/: index.rst.txt
_static/: custom.css  documentation_options.js
docs/: CNAME  build_bibliography.py  build_configuration.py  build_configuration_sd.py  build_docs.py  build_docs.py.orig  build_nomenclature.py  conf.py  generate_nomenclature.py  index.rst  references.bib  requirements.txt  todo_list.md
docs_pages/: .buildinfo  index.html  py-modindex.html  search.html
lossmodels/: KO.py
meanline_axial/: .gitlab-ci.yml  __init__.py  calculate.py  config_validation.py  config_validation.py.orig  config_validation_pydantic.py  configuration.py  configuration_options.py  graphics.py  math.py  math_utils.py  non_linear_problem.py  optimization_problem.py  performance_maps.py  plot_functions.py  plot_options.py  utilities.py  utilities.py.orig  validation.py
paper/: paper.bib  paper.md
projects/: test_snopt.py
source/: api_reference.html  (+13 more)
(+1425 files in other folders)
